Player can now throw items.